force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_CRDR_REV_BREAKDOWN</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_CRDR_REV_BREAKDOWN</externalName>
    <label>CRDR Revenue Breakdown</label>
    <pluralLabel>CRDR Revenue Breakdown</pluralLabel>
</CustomObject>