force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/ADJUSTMENT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ADJUSTMENT_FLAG__c</fullName>
    <description>ADJUSTMENT_FLAG</description>
    <externalDeveloperName>ADJUSTMENT_FLAG</externalDeveloperName>
    <label>Adjustment Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>