force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/AGREEMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_RECID__c</fullName>
    <description>AGREEMENT_RECID</description>
    <externalDeveloperName>AGREEMENT_RECID</externalDeveloperName>
    <label>Agreement</label>
    <length>24</length>
    <type>Text</type>
</CustomField>