force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/COLLECTED_AMT__c.field-meta.xml
<CustomField>
    <fullName>COLLECTED_AMT__c</fullName>
    <description>COLLECTED_AMT</description>
    <externalDeveloperName>COLLECTED_AMT</externalDeveloperName>
    <label>Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>