force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/COLLECTED_DATE__c.field-meta.xml
<CustomField>
    <fullName>COLLECTED_DATE__c</fullName>
    <description>COLLECTED_DATE</description>
    <externalDeveloperName>COLLECTED_DATE</externalDeveloperName>
    <label>Collected Date</label>
    <type>DateTime</type>
</CustomField>