force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/COLLECTED_YEAR__c.field-meta.xml
<CustomField>
    <fullName>COLLECTED_YEAR__c</fullName>
    <description>COLLECTED_YEAR</description>
    <externalDeveloperName>COLLECTED_YEAR</externalDeveloperName>
    <label>Collected Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>