force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/CRDR_INCOME_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CRDR_INCOME_FLAG__c</fullName>
    <description>CRDR_INCOME_FLAG</description>
    <externalDeveloperName>CRDR_INCOME_FLAG</externalDeveloperName>
    <label>CRDR Income Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>