force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/INVOICE_NUM__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_NUM__c</fullName>
    <description>INVOICE_NUM</description>
    <externalDeveloperName>INVOICE_NUM</externalDeveloperName>
    <label>Invoice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>