force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/INVOICE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE__c</fullName>
    <description>INVOICE_TYPE</description>
    <externalDeveloperName>INVOICE_TYPE</externalDeveloperName>
    <label>Invoice Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>