force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/INVOICE_TYPE_DESCRIP__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE_DESCRIP__c</fullName>
    <description>INVOICE_TYPE_DESCRIP</description>
    <externalDeveloperName>INVOICE_TYPE_DESCRIP</externalDeveloperName>
    <label>Invoice Type Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>