force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/MANUAL_FLAG__c.field-meta.xml
<CustomField>
    <fullName>MANUAL_FLAG__c</fullName>
    <description>MANUAL_FLAG</description>
    <externalDeveloperName>MANUAL_FLAG</externalDeveloperName>
    <label>Manual Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>