force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/RECEIPT_DATE__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_DATE__c</fullName>
    <description>RECEIPT_DATE</description>
    <externalDeveloperName>RECEIPT_DATE</externalDeveloperName>
    <label>Date Received</label>
    <type>DateTime</type>
</CustomField>