force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/RECEIPT_PAYOR__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_PAYOR__c</fullName>
    <description>RECEIPT_PAYOR</description>
    <externalDeveloperName>RECEIPT_PAYOR</externalDeveloperName>
    <label>Receipt Payor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>