force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/RECEIPT_RECID__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_RECID__c</fullName>
    <description>RECEIPT_RECID</description>
    <externalDeveloperName>RECEIPT_RECID</externalDeveloperName>
    <label>Receipt Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>