force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/RECEIPT_SOURCE_NUM__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_SOURCE_NUM__c</fullName>
    <description>RECEIPT_SOURCE_NUM</description>
    <externalDeveloperName>RECEIPT_SOURCE_NUM</externalDeveloperName>
    <label>Receipt Source Num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>