force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_REV_BREAKDOW__x/fields/REV_BREAKDOWN_ID__c.field-meta.xml
<CustomField>
    <fullName>REV_BREAKDOWN_ID__c</fullName>
    <description>REV_BREAKDOWN_ID</description>
    <externalDeveloperName>REV_BREAKDOWN_ID</externalDeveloperName>
    <label>Revenue Breakdown</label>
    <length>81</length>
    <referenceTo>Forrester_Case_CRDR_Revenue__x</referenceTo>
    <relationshipLabel>CRDR Revenue Breakdown</relationshipLabel>
    <relationshipName>CRDR_Revenue_Breakdown</relationshipName>
    <type>ExternalLookup</type>
</CustomField>